@@ -21,82 +21,10 @@ public class GroupTest {
     protected static final String NAME0 = "John";
     protected static final String NAME1 = "Nikolche";
     protected static final String NAME2 = "Johny";
-
-    @Test(enabled = true)
-    public void groupFileCanClose() throws NullPointerException, IOException {
-        Group group = new Group();
-        group.writeToFile("testfile.tightdb");
-        group.close();
-
-        Group group2 = new Group("testfile.tightdb");
-        group2.close();
-    }
-
-    @Test(enabled = true)
-    public void groupNoOverwrite() throws NullPointerException, IOException {
-        {
-            Group group = new Group();
-            try {
-                group.writeToFile("test_no_overwrite.tightdb");
-                try {
-                    group.writeToFile("test_no_overwrite.tightdb");
-                    fail("Expected exception did not occur");
-                }
-                catch (Throwable t) {} // FIXME: What exception exactly is expected here?
-            }
-            finally {
-                group.close();
-            }
-        }
-
-        {
-            Group group = new Group("test_no_overwrite.tightdb");
-            try {
-                try {
-                    group.writeToFile("test_no_overwrite.tightdb");
-                    fail("Expected exception did not occur");
-                }
-                catch (Throwable t) {} // FIXME: What exception exactly is expected here?
-            }
-            finally {
-                group.close();
-            }
-        }
-
-        {
-            Group group = new Group();
-            try {
-                (new File(System.getProperty("user.dir"), "test_no_overwrite.tightdb")).delete();
-                group.writeToFile("test_no_overwrite.tightdb");
-            }
-            finally {
-                group.close();
-            }
-        }
-    }
-
-/* TODO: Enable when implemented "free" method for the data
-    @Test(enabled = true)
-    public void groupByteBufferCanClose() {
-        Group group = new Group();
-        ByteBuffer data = group.writeToByteBuffer();
-        group.close();
-
-        Group group2 = new Group(data);
-        group2.close();
-    }
-*/
-    @Test(enabled = true)
-    public void groupMemCanClose() {
-        Group group = new Group();
-        byte[] data = group.writeToMem();
-        group.close();
-
-        Group group2 = new Group(data);
-        group2.close();
-    }
-
-    @Test(enabled = true)
+    
+    protected static final String FILENAME = "test_no_overwrite.tightdb";
+    
+    @Test
     public void shouldCreateTablesInGroup() {
         //util.setDebugLevel(2);
         Group group = new Group();
@@ -106,15 +34,14 @@ public class GroupTest {
                 new Date(), "extra", null);
         employees.add(NAME2, "B. Good", 20000, true, new byte[] { 1, 2, 3 },
                 new Date(), true, null);
-        employees.insert(1, NAME1, "Mihajlovski", 30000, false, new byte[] { 4,
+        employees.insert(1, NAME1, "Hansen", 30000, false, new byte[] { 4,
                 5 }, new Date(), 1234, null);
 
         byte[] data = group.writeToMem();
 
         // check table info retrieval
         assertEquals(1, group.size());
-        assertEquals(TestEmployeeTable.class.getSimpleName(),
-                group.getTableName(0));
+        assertEquals(TestEmployeeTable.class.getSimpleName(), group.getTableName(0));
         assertTrue(group.hasTable(TestEmployeeTable.class.getSimpleName()));
         assertFalse(group.hasTable("xxxxxx"));
 
@@ -143,6 +70,67 @@ public class GroupTest {
 
     }
 
+    @Test 
+    public void shouldOpenExistingGroupFile() throws IOException {
+    	new File(FILENAME).delete();
+    	Group group = new Group();
+        group.writeToFile(FILENAME);
+        group.close();
+        
+    	Group group2 = new Group(FILENAME);
+    	group2.close();
+    }
+    
+    @Test
+    public void groupCanWriteToFile() throws IOException {
+    	new File(FILENAME).delete();
+    	
+    	Group group = new Group();
+        group.writeToFile(FILENAME);
+        group.close();
+        // TODO: How can we verify that group is closed?
+    }
+
+    public void groupCanWriteToFile2() throws IOException {
+    	new File(FILENAME).delete();
+    	
+    	Group group = new Group(FILENAME);
+        group.writeToFile(FILENAME);
+        group.close();
+        // TODO: How can we verify that group is closed?
+    }
+
+    @Test(expectedExceptions = IOException.class)
+    public void groupNoOverwrite1() throws IOException {
+    	new File(FILENAME).delete();
+
+    	Group group = new Group();
+        group.writeToFile(FILENAME);
+        // writing to the same file should throw exception
+        group.writeToFile(FILENAME);
+    }
+
+/* TODO: Enable when implemented "free" method for the data
+    @Test(enabled = true)
+    public void groupByteBufferCanClose() {
+        Group group = new Group();
+        ByteBuffer data = group.writeToByteBuffer();
+        group.close();
+
+        Group group2 = new Group(data);
+        group2.close();
+    }
+*/
+    @Test(enabled = true)
+    public void groupMemCanClose() {
+        Group group = new Group();
+        byte[] data = group.writeToMem();
+        group.close();
+
+        Group group2 = new Group(data);
+        group2.close();
+    }
+
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void groupByteBufferChecksForNull() {
         ByteBuffer data = null;
@@ -163,4 +151,27 @@ public class GroupTest {
         Group group = new Group(data);
         // Expect to throw exception
     }
+
+
+    @Test
+    public void shouldThrowExceptionOnMethodCallToClosedGroup() throws IOException {
+        boolean failed = false;
+        
+        new File(FILENAME).delete();
+        Group group = new Group();
+        group.close();
+
+        try { group.size(); failed = true; } catch (IllegalStateException e) {}
+        try { group.hasTable("hi"); failed = true; } catch (IllegalStateException e) {}
+        try { group.getTableName(0); failed = true; } catch (IllegalStateException e) {}
+        try { group.getTable("hi"); failed = true; } catch (IllegalStateException e) {}
+        try { group.writeToFile(""); failed = true; } catch (IllegalStateException e) {}
+        try { group.writeToFile(new File("hi")); failed = true; } catch (IllegalStateException e) {}
+        try { group.writeToMem(); failed = true; } catch (IllegalStateException e) {}
+        
+        if (failed)
+        	fail("Didn't throw exception");
+    }    
+
+    
 }
